[gd_scene load_steps=4 format=2]

[ext_resource path="res://BurgerMenuIcon.png" type="Texture" id=1]
[ext_resource path="res://Scripts/ListedProject.gd" type="Script" id=2]
[ext_resource path="res://defaultTheme.tres" type="Theme" id=3]

[node name="Root" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Top" type="Panel" parent="."]
anchor_right = 1.0
margin_bottom = 45.0
theme = ExtResource( 3 )

[node name="MenuButton" type="MenuButton" parent="Top"]
anchor_bottom = 1.0
margin_right = 48.0
margin_bottom = -5.0
text = "Menu"
items = [ "New Project", null, 0, false, false, 0, 0, null, "", false, "Save", null, 0, false, false, 1, 0, null, "", false, "Load From File", null, 0, false, false, 2, 0, null, "", false, "Quit", null, 0, false, false, 3, 0, null, "", false ]

[node name="Label" type="Label" parent="Top"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = -5.0
text = "Project Task Tracker V0.1"
align = 1
valign = 1

[node name="HSeparator" type="HSeparator" parent="Top"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -5.0

[node name="Body" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 45.0
margin_bottom = -20.0
theme = ExtResource( 3 )

[node name="ScrollContainer" type="ScrollContainer" parent="Body"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="Body/ScrollContainer"]
margin_right = 400.0
margin_bottom = 115.0
size_flags_horizontal = 3

[node name="ListedProject" type="Control" parent="Body/ScrollContainer/VBoxContainer"]
margin_right = 400.0
margin_bottom = 61.585
rect_min_size = Vector2( 0, 61.585 )
size_flags_vertical = 3
script = ExtResource( 2 )

[node name="ColorRect" type="ColorRect" parent="Body/ScrollContainer/VBoxContainer/ListedProject"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 3 )

[node name="SizeTween" type="Tween" parent="Body/ScrollContainer/VBoxContainer/ListedProject/ColorRect"]

[node name="ColorTween" type="Tween" parent="Body/ScrollContainer/VBoxContainer/ListedProject/ColorRect"]

[node name="Control" type="Control" parent="Body/ScrollContainer/VBoxContainer/ListedProject"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="ContentBackground" type="Panel" parent="Body/ScrollContainer/VBoxContainer/ListedProject/Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -10.0

[node name="HBoxContainer" type="HBoxContainer" parent="Body/ScrollContainer/VBoxContainer/ListedProject/Control/ContentBackground"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/separation = 6

[node name="LineEdit" type="LineEdit" parent="Body/ScrollContainer/VBoxContainer/ListedProject/Control/ContentBackground/HBoxContainer"]
margin_right = 150.0
margin_bottom = 41.0
rect_min_size = Vector2( 150, 0 )
text = "Project Name"

[node name="Label" type="Label" parent="Body/ScrollContainer/VBoxContainer/ListedProject/Control/ContentBackground/HBoxContainer"]
margin_left = 156.0
margin_top = 13.0
margin_right = 243.0
margin_bottom = 27.0
size_flags_horizontal = 3
text = "100%"
align = 1
valign = 1

[node name="LabelTween" type="Tween" parent="Body/ScrollContainer/VBoxContainer/ListedProject/Control/ContentBackground/HBoxContainer/Label"]

[node name="OptionButton" type="OptionButton" parent="Body/ScrollContainer/VBoxContainer/ListedProject/Control/ContentBackground/HBoxContainer"]
margin_left = 249.0
margin_right = 344.0
margin_bottom = 41.0
rect_min_size = Vector2( 95, 0 )
text = "ToDo"
flat = true
items = [ "ToDo", null, false, 0, null, "WIP", null, false, 1, null, "Testing", null, false, 2, null, "Cancelled", null, false, 3, null, "Complete", null, false, 4, null ]
selected = 0

[node name="MenuButton" type="MenuButton" parent="Body/ScrollContainer/VBoxContainer/ListedProject/Control/ContentBackground/HBoxContainer"]
margin_left = 350.0
margin_right = 380.0
margin_bottom = 41.0
rect_min_size = Vector2( 30, 30 )
icon = ExtResource( 1 )
expand_icon = true
items = [ "Add New Task", null, 0, false, false, 0, 0, null, "", false, "Delete Project", null, 0, false, false, 1, 0, null, "", false ]

[node name="VBoxContainer" type="VBoxContainer" parent="Body/ScrollContainer/VBoxContainer/ListedProject"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 50.0

[node name="Button" type="Button" parent="Body/ScrollContainer/VBoxContainer/ListedProject/VBoxContainer"]
margin_right = 400.0
margin_bottom = 20.0

[node name="Button2" type="Button" parent="Body/ScrollContainer/VBoxContainer/ListedProject/VBoxContainer"]
margin_top = 24.0
margin_right = 400.0
margin_bottom = 44.0

[node name="Button3" type="Button" parent="Body/ScrollContainer/VBoxContainer/ListedProject/VBoxContainer"]
margin_top = 48.0
margin_right = 400.0
margin_bottom = 68.0

[node name="Button4" type="Button" parent="Body/ScrollContainer/VBoxContainer/ListedProject/VBoxContainer"]
margin_top = 72.0
margin_right = 400.0
margin_bottom = 92.0

[node name="Button5" type="Button" parent="Body/ScrollContainer/VBoxContainer/ListedProject/VBoxContainer"]
margin_top = 96.0
margin_right = 400.0
margin_bottom = 116.0

[node name="Button6" type="Button" parent="Body/ScrollContainer/VBoxContainer/ListedProject/VBoxContainer"]
margin_top = 120.0
margin_right = 400.0
margin_bottom = 140.0

[node name="Button7" type="Button" parent="Body/ScrollContainer/VBoxContainer/ListedProject/VBoxContainer"]
margin_top = 144.0
margin_right = 400.0
margin_bottom = 164.0

[node name="Button8" type="Button" parent="Body/ScrollContainer/VBoxContainer/ListedProject/VBoxContainer"]
margin_top = 168.0
margin_right = 400.0
margin_bottom = 188.0

[node name="Button9" type="Button" parent="Body/ScrollContainer/VBoxContainer/ListedProject/VBoxContainer"]
margin_top = 192.0
margin_right = 400.0
margin_bottom = 212.0

[node name="ListedProject2" type="Control" parent="Body/ScrollContainer/VBoxContainer"]
margin_top = 65.0
margin_right = 400.0
margin_bottom = 115.0
rect_min_size = Vector2( 0, 50 )
script = ExtResource( 2 )

[node name="ColorRect" type="ColorRect" parent="Body/ScrollContainer/VBoxContainer/ListedProject2"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 3 )

[node name="SizeTween" type="Tween" parent="Body/ScrollContainer/VBoxContainer/ListedProject2/ColorRect"]

[node name="ColorTween" type="Tween" parent="Body/ScrollContainer/VBoxContainer/ListedProject2/ColorRect"]

[node name="Control" type="Control" parent="Body/ScrollContainer/VBoxContainer/ListedProject2"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="ContentBackground" type="Panel" parent="Body/ScrollContainer/VBoxContainer/ListedProject2/Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -10.0

[node name="HBoxContainer" type="HBoxContainer" parent="Body/ScrollContainer/VBoxContainer/ListedProject2/Control/ContentBackground"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/separation = 6

[node name="LineEdit" type="LineEdit" parent="Body/ScrollContainer/VBoxContainer/ListedProject2/Control/ContentBackground/HBoxContainer"]
margin_right = 150.0
margin_bottom = 30.0
rect_min_size = Vector2( 150, 0 )
text = "Project Name"

[node name="Label" type="Label" parent="Body/ScrollContainer/VBoxContainer/ListedProject2/Control/ContentBackground/HBoxContainer"]
margin_left = 156.0
margin_top = 8.0
margin_right = 243.0
margin_bottom = 22.0
size_flags_horizontal = 3
text = "100%"
align = 1
valign = 1

[node name="LabelTween" type="Tween" parent="Body/ScrollContainer/VBoxContainer/ListedProject2/Control/ContentBackground/HBoxContainer/Label"]

[node name="OptionButton" type="OptionButton" parent="Body/ScrollContainer/VBoxContainer/ListedProject2/Control/ContentBackground/HBoxContainer"]
margin_left = 249.0
margin_right = 344.0
margin_bottom = 30.0
rect_min_size = Vector2( 95, 0 )
text = "ToDo"
flat = true
items = [ "ToDo", null, false, 0, null, "WIP", null, false, 1, null, "Testing", null, false, 2, null, "Cancelled", null, false, 3, null, "Complete", null, false, 4, null ]
selected = 0

[node name="MenuButton" type="MenuButton" parent="Body/ScrollContainer/VBoxContainer/ListedProject2/Control/ContentBackground/HBoxContainer"]
margin_left = 350.0
margin_right = 380.0
margin_bottom = 30.0
rect_min_size = Vector2( 30, 30 )
focus_mode = 2
icon = ExtResource( 1 )
expand_icon = true
items = [ "Add New Task", null, 0, false, false, 0, 0, null, "", false, "Delete Project", null, 0, false, false, 1, 0, null, "", false ]

[node name="Bottom" type="Panel" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -20.0
